--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <!-- Agregar favicon -->
-  <link rel="icon" type="image/png" href="6538cbe5-0504-4ec3-9b1e-8b170112f6f0.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        html, body {
+background-color: rgb(76, 237, 184);
+        }
+    </style>
 </head>
 <body>
-  <h1>este es mi primer despliegue con netlife</h1>
+    <h1>este es mi primer despliegue con netlife</h1>
 </body>
 </html>
